--- a/index.html
+++ b/index.html
@@ -567,11 +567,11 @@
 
         <div class="box">
             <h3>our branches</h3>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> india </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> japan </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> france </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> russia </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> USA </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Abuja </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Lagos </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Kwara </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Benin </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> LOL IDK </a>
         </div>
 
         <div class="box">
@@ -587,7 +587,7 @@
         <div class="box">
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
+            <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
             <a href="#"> <i class="fas fa-envelope"></i> mutawakkilyusuf@yahoo.com </a>
             <a href="#"> <i class="fas fa-map-marker-alt"></i> Osogbo, Nigeria </a>
         </div>
